update main page

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                         </h3>
                         
                         <h3>
-                            <span>I'm a Security Engineer, skilled in monitoring and detection of cyber threats - equipped with a passion for strengthening organizational defenses and optimizing incident response</span>.
+                            <span style="text-align:justify">I'm a Security Engineer, skilled in monitoring and detection of cyber threats - equipped with a passion for strengthening organizational defenses and optimizing incident response</span>.
                         </h3>
-                        <h3><span>Beyond my professional pursuits, I'm passionate about technology, fascinated by human psychology, and committed to making a positive impact through social work.</span></h3>
-                        <h3><span><a class="smoothscroll" href="#about">Scroll down</a> to learn more <a class="smoothscroll" href="#about">about me</a>.</span></h3>
+                        <h3><span style="text-align:justify">Beyond my professional pursuits, I'm passionate about technology, fascinated by human psychology, and committed to making a positive impact through social work.</span></h3>
+                        <h3><span style="text-align:justify"><a class="smoothscroll" href="#about">Scroll down</a> to learn more <a class="smoothscroll" href="#about">about me</a>.</span></h3>
                         <!--
                     <div class="s-hero__content-social">
                         <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
@@ -100,6 +100,7 @@
                 </div>
             </div>
             <!-- s-hero__content -->
+        <!--
 
             <div class="s-hero__scroll">
                 <a href="#about" class="s-hero__scroll-link smoothscroll">
@@ -111,6 +112,7 @@
                     <span class="scroll-text">Scroll Down</span>
                 </a>
             </div>
+        -->
             <!-- s-hero__scroll -->
         </section>
         <!-- end s-hero -->
@@ -124,13 +126,13 @@
                 </div>
                 <div class="column large-9 tab-12 s-about__content">
                     <h3>About Me</h3>
-                    <p>
+                    <p style="text-align: justify;">
                         I am driven by a curiosity to understand the complexities of the world. My enduring passion for adventure fuels my joy in identifying and solving challenges, be it in professional milestones or personal pursuits. Collaboration is where I thrive, finding inspiration in diverse teams and unique contributions to meaningful improvements.
                     </p>
-                    <p>
+                    <p style="text-align: justify;">
                         Fascinated by cybersecurity since high school, I rediscovered this passion during college and embarked on a continuous journey of knowledge and growth in the field. As a Security Engineer, I've significantly enhanced organizational security through purple teaming activities, identifying critical gaps, boosting infrastructure visibility, and strengthening detection and response capabilities. My expertise extends to implementing advanced security controls, fortifying computer systems with robust system hardening, and crafting detailed incident response processes for swift and effective resolution. In my role as a SOC Analyst, I actively contributed to continuous monitoring and developed innovative detection techniques. Moreover, I have a penchant for automating routine tasks, streamlining workflows for myself and my team.
                     </p>
-                    <p>
+                    <p style="text-align: justify;">
                         Outside of work, I am somewhat of a car enthusiast. Exploring human psychology, figuring out why people think and act the way they do, is something I find interesting. I also enjoy physics, especially the concepts of time and space. Unraveling the mysteries of the universe and how it all fits together captivates my imagination.
                     </p>
 
@@ -180,7 +182,7 @@
                             </p>
                         </div>
 
-                        <ul>
+                        <ul style="text-align: justify;">
                             <li>
                                 Monitoring and detection on security tools.                            
                             </li>
@@ -237,7 +239,7 @@
                                 </span>
                             </p>
                         </div>
-                        <ul>
+                        <ul style="text-align: justify;">
                             <li>
                                 Designed and established a secure network perimeter.
                             </li>
@@ -269,7 +271,7 @@
                                 </span>
                             </p>
                         </div>
-                        <ul>
+                        <ul style="text-align: justify;">
                             <li>
                                 SEED [Security Events Enumeration & Detection] - my final year project - a proactive log collection, monitoring and security detection solution
                             </li>
@@ -289,14 +291,14 @@
                 </div>
                 <div class="column large-9 tab-12">
                     <div class="resume-block">
-                        <p>
+                        <p style="text-align: justify;">
                             I find myself proficient and consistent in learning new tools, technologies and skills. My major skills lie around defense against cyber threats - monitoring and analysis of security alerts and incidents, making
                             new detections, formulating incident response and creating processes and procedures along with automations of routine tasks.
                         </p>
                     </div>
                     <!-- end resume-block -->
                     <!--                    <ul class="skill-bars-fat">-->
-                        <ul>
+                        <ul style="text-align: justify;">
                             <li>
                                 <!--<div style="height: 2rem;" class="progress percent90"></div>-->                                
                                 <p>Security Detection, Monitoring & Incident Management</p>
