--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                     <div class="column large-7 medium-12">
 
                         <div class="contact-block">
-                            <h2 style="color: white; text-align: center; padding-top: 0.5rem; padding-bottom: 0.5rem;">
+                            <h2 style="color: white; text-align: center; padding-top: 1.5rem; padding-bottom: 1.5rem;">
                                 Reach out
                             </h2>
                         </div>
@@ -680,19 +680,39 @@
                         <div>
                             <div>
 
-                                <div class="contact-block" style="margin: auto; text-align: center;">
-                                    <h2 style="color: white; text-align: center; padding-top: 0.5rem; padding-bottom: 0.5rem;">
+                                <div class="contact-block">
+                                    <h2 style="color: white; text-align: center;padding-top: 1.5rem; padding-bottom: 1.5rem;">
                                     Leave a Message
                                     </h2>
+                                    </div>
+                                    <div>
                                         <form action="https://formsubmit.co/bda96ac900cf9e223cd3257d1e3f312d" method="post" autocomplete="on">
-                                        <input style="color: white;" class="h-full-width" type="text" name="Name" placeholder="Name" />
-                                        <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email" />
-                                        <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number" />
-                                        <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message" />
-                                        <input type="hidden" name="_captcha" value="false" />
-                                        <input type="hidden" name="_autoresponse" value="Thanks for your message, I will try to get back to you soon." />
-                                        <input type="hidden" name="_next" value="https://ali-ahmed-dar.github.io/" />
-                                        <input class="btn btn--primary h-full-width" type="submit" value="Send" onclick="alert('Thanks for your message, I will try to get back to you soon.')" />
+                                
+                                        <div class="contact-block">
+                                            <input style="color: white;" class="h-full-width" type="text" name="Name" placeholder="Name" />
+                                        </div>
+                                        <div class="contact-block">
+                                            <input style="color: white;" class="h-full-width" type="email" name="Email" placeholder="Email" />
+                                        </div>
+                                        <div class="contact-block">
+                                            <input style="color: white;" class="h-full-width" type="text" name="Mobile number" placeholder="Mobile number" />
+                                        </div>
+                                        <div class="contact-block">
+                                            <input style="color: white;" class="h-full-width" type="text" name="Message" placeholder="Message" />
+                                        </div>
+                                        <div class="contact-block">
+                                            <input type="hidden" name="_captcha" value="false" />
+                                        </div>
+                                        <div class="contact-block">
+                                            <input type="hidden" name="_autoresponse" value="Thanks for your message, I will try to get back to you soon." />
+                                        </div>
+                                        <div class="contact-block">
+                                            <input type="hidden" name="_next" value="https://ali-ahmed-dar.github.io/" />
+                                        </div>
+                                        <div class="contact-block">
+                                            <input class="btn btn--primary h-full-width" type="submit" value="Send" onclick="alert('Thanks for your message, I will try to get back to you soon.')" />
+                                        </div>
+
                                     </form>
                                 </div>
                                 <!-- end contact-block -->
