--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row s-header__nav-wrap">
                 <nav class="s-header__nav">
                     <ul>
-                        <li class="current"><a class="smoothscroll" href="#hero">Home</a></li>
+                        <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
                         <li><a class="smoothscroll" href="#about">About</a></li>
                         <li><a class="smoothscroll" href="#resume">Resume</a></li>
                         <li><a class="smoothscroll" href="#portfolio">Works</a></li>
@@ -64,14 +64,14 @@
         </header>
         <!-- end s-header -->
 
-        <!-- hero
+        <!-- home
     ================================================== -->
-        <section id="hero" class="s-hero target-section">
-            <div class="s-hero__bg rellax" data-rellax-speed="-7"></div>
+        <section id="home" class="s-home target-section">
+            <div class="s-home__bg rellax" data-rellax-speed="-7"></div>
 
-            <div class="row s-hero__content">
+            <div class="row s-home__content">
                 <div class="column">
-                    <div class="s-hero__content-about">
+                    <div class="s-home__content-about">
                         <h1>
                             Ali Ahmed Dar
                         </h1>
@@ -86,7 +86,7 @@
                         <h3><span style="text-align:justify">Beyond my professional pursuits, I'm passionate about technology, fascinated by human psychology, and committed to making a positive impact through social work.</span></h3>
                         <h3><span style="text-align:justify"><a class="smoothscroll" href="#about">Scroll down</a> to learn more <a class="smoothscroll" href="#about">about me</a>.</span></h3>
                         <!--
-                    <div class="s-hero__content-social">
+                    <div class="s-home__content-social">
                         <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
                         <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
                         <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
@@ -96,14 +96,14 @@
                     </div>
 -->
                     </div>
-                    <!-- end s-hero__content-about -->
+                    <!-- end s-home__content-about -->
                 </div>
             </div>
-            <!-- s-hero__content -->
+            <!-- s-home__content -->
         <!--
 
-            <div class="s-hero__scroll">
-                <a href="#about" class="s-hero__scroll-link smoothscroll">
+            <div class="s-home__scroll">
+                <a href="#about" class="s-home__scroll-link smoothscroll">
                     <span class="scroll-arrow">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);">
                             <path d="M18.707 12.707L17.293 11.293 13 15.586 13 6 11 6 11 15.586 6.707 11.293 5.293 12.707 12 19.414z"></path>
@@ -113,9 +113,9 @@
                 </a>
             </div>
         -->
-            <!-- s-hero__scroll -->
+            <!-- s-home__scroll -->
         </section>
-        <!-- end s-hero -->
+        <!-- end s-home -->
 
         <!-- about
     ================================================== -->
