--- a/styles.html
+++ b/styles.html
@@ -75,16 +75,16 @@
     </header> <!-- end s-header -->
 
 
-    <!-- hero
+    <!-- home
     ================================================== -->
-    <section id="hero" class="s-hero target-section">
+    <section id="home" class="s-home target-section">
 
-        <div class="s-hero__bg rellax" data-rellax-speed="-7"></div>
+        <div class="s-home__bg rellax" data-rellax-speed="-7"></div>
 
-        <div class="row s-hero__content">
+        <div class="row s-home__content">
             <div class="column">
 
-                <div class="s-hero__content-about">
+                <div class="s-home__content-about">
 
                     <h1>I'm Jonathan Doe.</h1>
 
@@ -94,7 +94,7 @@
                     and learn more <a href="#about">about me</a>.
                     </h3>
 
-                    <div class="s-hero__content-social">
+                    <div class="s-home__content-social">
                         <a href="#0"><i class="fab fa-facebook-square" aria-hidden="true"></i></a>
                         <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a>
                         <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a>
@@ -103,21 +103,21 @@
                         <a href="#0"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                     </div>
 
-                </div> <!-- end s-hero__content-about -->
+                </div> <!-- end s-home__content-about -->
 
             </div>
-        </div> <!-- s-hero__content -->
+        </div> <!-- s-home__content -->
 
-        <div class="s-hero__scroll">
-            <a href="#styles" class="s-hero__scroll-link smoothscroll">
+        <div class="s-home__scroll">
+            <a href="#styles" class="s-home__scroll-link smoothscroll">
                 <span class="scroll-arrow">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill:rgba(0, 0, 0, 1);"><path d="M18.707 12.707L17.293 11.293 13 15.586 13 6 11 6 11 15.586 6.707 11.293 5.293 12.707 12 19.414z"></path></svg>
                 </span>
                 <span class="scroll-text">Scroll Down</span>
             </a>
-        </div> <!-- s-hero__scroll -->
+        </div> <!-- s-home__scroll -->
 
-    </section> <!-- end s-hero -->
+    </section> <!-- end s-home -->
 
 
     <!-- s-styles
